--- a/admin/accountManagement.html
+++ b/admin/accountManagement.html
@@ -6,7 +6,7 @@
   <title>Account Management</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="css/accountManagement.css">
+  <link rel="stylesheet" href="../css/accountManagement.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
@@ -32,8 +32,9 @@
     <a href="listBook.html">Books</a>
     <a href="booksBorrowed.html" >Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
-    <a href="login.html">Logout</a>
     <a href="accountManagement.html" class="active">Account Management</a>
+    <a href="../login.html">Logout</a>
+    
   </div>
 
 <!-- Wrapper -->
@@ -143,7 +144,7 @@
     </div>
   </div>  
 
-  <script src="js/accountManagement.js">
+  <script src="../js/accountManagement.js">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
