--- a/admin/booksBorrowed.html
+++ b/admin/booksBorrowed.html
@@ -10,7 +10,7 @@
   
   <!-- DataTables CSS -->
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="../css/admin.css">
 </head>
 <body>
 
@@ -34,7 +34,7 @@
     <a href="booksBorrowed.html" class="active">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
     <a href="accountManagement.html">Account Management</a>
-    <a href="login.html">Logout</a>
+    <a href="../login.html">Logout</a>
   </div>
  
   <!-- Content -->
