--- a/admin/listBook.html
+++ b/admin/listBook.html
@@ -7,7 +7,7 @@
   <title>Admin Book Management</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="css/listBook.css">
+  <link rel="stylesheet" href="../css/listBook.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
@@ -34,7 +34,7 @@
     <a href="booksBorrowed.html" >Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
     <a href="accountManagement.html">Account Management</a>
-    <a href="login.html">Logout</a>
+    <a href="../login.html">Logout</a>
   </div>
 
 <!-- Wrapper -->
@@ -396,7 +396,7 @@
     </div>
   </div>  
 
-  <script src="js/listBook.js">
+  <script src="../js/listBook.js">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
