--- a/admin/listcategory.html
+++ b/admin/listcategory.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Book Management</title>
-  
+ 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/locationlibrary.css">
+    <link rel="stylesheet" href="../css/listcategory.css">
 </head>
 <body>
 
@@ -29,99 +29,99 @@
   <div class="sidebar d-flex flex-column justify-content-between py-4 px-3">
     <h3 class="text-center mb-4">Admin Panel</h3>
     <a href="admin.html" >Control Table</a>
-    <a href="listcategory.html">Category</a>
-    <a href="locationlibrary.html" class="active">Location</a>
+    <a href="listcategory.html" class="active">Category</a>
+    <a href="locationlibrary.html" >Location</a>
     <a href="listBook.html">Books</a>
     <a href="booksBorrowed.html">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
      <a href="accountManagement.html">Account Management</a>
-    <a href="login.html">Logout</a>
-
-   
-
+     <a href="../login.html">Logout</a>
   </div>
 
 <!-- Wrapper -->
 <div class="wrapper d-flex">
+ 
     <!-- Main Content -->
     <div class="content flex-grow-1">
+      
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="admin.html">Admin</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Location</li>
+          <li class="breadcrumb-item active" aria-current="page">Category</li>
         </ol>
       </nav>
-      <h1>Location</h1>
-      <button id="addBookBtn" class="btn btn-primary mb-3">Add Location</button>
+  
+      <h1>Category</h1>
+      <button id="addBookBtn" class="btn btn-primary mb-3">Add Category</button>
       <table id="bookTable" class="display">
         <thead>
-          <tr>
+          <tr>  
             <th>ID</th>
-            <th>Name</th>
-            <th>Address</th>
+            <th>Title</th>
             <th>Actions</th> <!-- Thêm cột "Actions" -->
           </tr>
         </thead>
         <tbody>
             <tr>
                 <td>1</td>
-                <td>Ho Chi Minh City General Library</td>
-                <td>69 Ly Tu Trong, Ben Nghe Ward, District 1, HCMC</td>
-                <td>
+                <td>Literature</td>
+                <td class="actions">
                   <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                   <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                 </td>
               </tr>
             <tr>
                 <td>2</td>
-                <td>Ho Chi Minh City Scientific and Technical Library</td>
-                <td>159 Nguyen Dinh Chieu, Ward 6, District 3, HCMC</td>
-                <td>
+                <td>Science</td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Ho Chi Minh University of Social Sciences and Humanities Library</td>
-                <td>10-12 Dinh Tien Hoang, Ben Nghe Ward, District 1, HCMC</td>
-                <td>
+                <td>History</td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Vietnam National University Library, HCMC</td>
-                <td>282 Nguyen Chi Thanh, Ward 5, District 10, HCMC</td>
-                <td>
+                <td>Children</td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>District 1 Library</td>
-                <td>76 Le Thanh Ton, Ben Thanh Ward, District 1, HCMC</td>
-                <td>
+                <td>Mentality</td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>District 5 Library</td>
-                <td>76 Nguyen Bieu, Ward 1, District 5, HCMC</td>
-                <td>
+                <td>Economy</td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
             </tr>
             <tr>
                 <td>7</td>
-                <td>Ho Chi Minh City Youth Library</td>
-                <td>69 Le Thi Rieng, Ben Thanh Ward, District 1, HCMC</td>
-                <td>
+                <td>Life Skills</td>
+                <td class="actions">
+                    <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
+                    <button class="btn btn-warning btn-sm edit-btn">Edit</button>
+                  </td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Sport</td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -136,20 +136,16 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="addBookModalLabel">Add New Location</h5>
+          <h5 class="modal-title" id="addBookModalLabel">Add New Category</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <form id="addBookForm">
             <div class="mb-3">
-              <label for="bookTitle" class="form-label">Name</label>
+              <label for="bookTitle" class="form-label">Title</label>
               <input type="text" class="form-control" id="bookTitle" required>
             </div>
-            <div class="mb-3">
-              <label for="bookAuthor" class="form-label">Address</label>
-              <input type="text" class="form-control" id="bookAuthor" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Add Location</button> <!-- Add Book button -->
+            <button type="submit" class="btn btn-primary">Add Category</button> <!-- Add Book button -->
           </form>
         </div>
       </div>
@@ -161,18 +157,14 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="editBookModalLabel">Edit Location</h5>
+          <h5 class="modal-title" id="editBookModalLabel">Edit Book</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <form id="editBookForm">
             <div class="mb-3">
-              <label for="editBookTitle" class="form-label">Name</label>
+              <label for="editBookTitle" class="form-label">Title</label>
               <input type="text" class="form-control" id="editBookTitle" required>
-            </div>
-            <div class="mb-3">
-              <label for="editBookAuthor" class="form-label">Address</label>
-              <input type="text" class="form-control" id="editBookAuthor" required>
             </div>
             <button type="submit" class="btn btn-primary">Save Changes</button> <!-- Save Changes button -->
           </form>
@@ -181,7 +173,7 @@
     </div>
   </div>  
 
-  <script src="js/locationlibrary.js">
+  <script src="../js/listcategory.js">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
