--- a/booksGenere/literature.html
+++ b/booksGenere/literature.html
@@ -58,6 +58,7 @@
                         <li class="nav-item"><a class="nav-link " href="../blog.html">Blog</a></li>
                         <li class="nav-item"><a class="nav-link" href="../policy.html">Policy</a></li>
                         <li class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../styleguide.html">Style Guide</a></li>
                     </ul>
                     <div class="search-bar ms-3 d-flex">
                         <input type="text" class="form-control" placeholder="Search book, author...">
