--- a/admin/booksRetuned.html
+++ b/admin/booksRetuned.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
   <link rel="stylesheet" href="../css/listBook.css">
+  <link rel="stylesheet" href="../css/admin.css">
  
 </head>
 <body>
