--- a/admin/listBook.html
+++ b/admin/listBook.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" href="../css/admin.css">
 </head>
 <body>
 
