--- a/admin/locationlibrary.html
+++ b/admin/locationlibrary.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/locationlibrary.css">
+    <link rel="stylesheet" href="../css/admin.css">
 </head>
 <body>
 
