--- a/layout.html
+++ b/layout.html
@@ -52,7 +52,7 @@
                     <li class="nav-item"><a class="nav-link" href="policy.html">Policy</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 
-                    <li class="nav-item"><a class="nav-link active" href="typography.html">Style Guide</a></li>
+                    <li class="nav-item"><a class="nav-link " href="typography.html">Style Guide</a></li>
 
 
                 </ul>
